endet project (error with exit-redirect)

--- a/src/main/resources/public/starter.html
+++ b/src/main/resources/public/starter.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html lang="en" data-framework="intercoolerjs">
+<html lang="en" >
 <head>
     <meta charset="utf-8">
     <title>todos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
 <body>
-<div style="text-align: center">
+<div >
     <h1>HEllO, todos!</h1>
+    <h5 id="login"> LOG IN with Google</h5>
     <form action="/google" method="get">
-        <button>Registration with Google</button>
+        <button id="starter">
+            <img src="https://www.google.ru/images/branding/googleg/1x/googleg_standard_color_128dp.png">
+        </button>
     </form>
 </div>
 </body>
